Passage à  un modèle MVC pour permettre de gérer l'authentification et l'accès à la base de données de l'entreprise GSB (serveur distant)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EtapesActivity"></activity>
-        <activity android:name=".RepasActivity" />
-        <activity android:name=".NuitActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Vue.EtapesActivity"></activity>
+        <activity android:name=".Vue.RepasActivity" />
+        <activity android:name=".Vue.NuitActivity" />
+        <activity android:name=".Vue.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -27,9 +27,9 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".HfActivity" />
-        <activity android:name=".HfRecapActivity" />
-        <activity android:name=".KmActivity" />
+        <activity android:name=".Vue.HfActivity" />
+        <activity android:name=".Vue.HfRecapActivity" />
+        <activity android:name=".Vue.KmActivity" />
     </application>
 
 </manifest>
