LoginActivity Le lancement se fait sur cette activité Comparaison avec les mots de passe et utilisateur stockés dans le controleur En cas d'échec, affichage d'un message d'echec En cas de succès, ouverture de MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Vue.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Vue.EtapesActivity" />
         <activity android:name=".Vue.RepasActivity" />
         <activity android:name=".Vue.NuitActivity" />
         <activity android:name=".Vue.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+
+
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
