--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,22 @@
         android:allowBackup="true"
         android:fullBackupContent="@xml/my_backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Vue.LoginActivity">
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Vue.EtapesActivity" />
-        <activity android:name=".Vue.RepasActivity" />
-        <activity android:name=".Vue.NuitActivity" />
-        <activity android:name=".Vue.MainActivity">
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.EtapesActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.RepasActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.NuitActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.MainActivity">
             <intent-filter>
 
 
@@ -33,9 +34,9 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".Vue.HfActivity" />
-        <activity android:name=".Vue.HfRecapActivity" />
-        <activity android:name=".Vue.KmActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.HfActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.HfRecapActivity" />
+        <activity android:name="fr.cned.emdsgil.suividevosfrais.Vue.KmActivity" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
